--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: acco{lab}
 subtitle: Gestographie
 email: contact.accolab@gmail.com
 description: Pour un musée participatif de notre culture gestuelle
-baseurl: "/documentation/" # the subpath of your site, e.g. /blog
-url: 'https://accolab.github.io' # the base hostname & protocol for your site
+baseurl: "documentation/" # the subpath of your site, e.g. /blog
+url: 'https://accolab.github.io/' # the base hostname & protocol for your site
 author:
 street_address: ici
 city: Paris
